<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<!-- 频道名称 -->
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/manager_edit_title" />
		<EditText android:id="@+id/manager_edit_title" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>

	<!-- 频道链接-->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/manager_edit_link" />
	<EditText android:id="@+id/manager_edit_link" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" />
	
	<!-- 频道描述-->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/manager_edit_description" />
	<EditText android:id="@+id/manager_edit_description" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	
	
	<Button android:id="@+id/manager_edit_confirm" 
	  android:text="@string/manager_edit_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	 />

</LinearLayout>